# geos.js

./: .c8rc.json  .gitignore  404.html  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.mjs  sitemap.xml  tsconfig.json
.github/workflows/: ci.yml  coverage.yml  deploy.yml  publish.yml
assets/css/: styles.df5b1e19.css
assets/js/: 0058b4c6.e70ae04e.js  021c9a8f.92e7292e.js  021c9a8f.f0765ec3.js  17896441.8bad6e3c.js  1df93b7f.a74d12de.js  543.f7d4b0d9.js  5e95c892.5a9d3cba.js  72e14192.8428d814.js  72e14192.c03e5247.js  90c7ccc4.744ad0e0.js  a7bd4aaa.47a57e3a.js  a94703ab.770f39a8.js  main.70581cdb.js  main.b57174fa.js  runtime~main.6696d156.js  runtime~main.f224eb76.js
cpp/: CMakeLists.txt  INSTALL.md  Makefile  exported_functions.txt
cpp/scripts/process-geos-capi/: index.mts  package.json  tsconfig.json
cpp/scripts/process-geos-docs/: index.mjs  package-lock.json  package.json
cpp/src/: geos_js.cpp
docs/: .gitignore  docusaurus.config.ts  package.json  quick-start.html  sidebars.ts  tsconfig.json
docs/api/: version.html
docs/plugins/: monaco-editor-loader.js
docs/scripts/: generate-api-docs.mts  generate-docs.mts
docs/src/: index.d.ts
scripts/: generate-docs.mts  tsconfig.json  update-readme.mts
src/: index.mts
src/core/: GEOSError.mts  geos-error.mts  geos.mts  reusable-memory.mts  symbols.mts
src/geom/: Geometry.mts  PreparedGeometry.mts  geometry.mts
src/helpers/: helpers.mts
src/io/: GeoJSON.mts  WKB.mts  WKT.mts  geosify.mts  jsonify.mts  wkb.mts  wkt.mts
src/measurement/: area.mts  bounds.mts  distance.mts  frechetDistance.mts  hausdorffDistance.mts  length.mts  nearestPoints.mts
src/misc/: grow-memory.mts  helpers.mts  version.mts
src/operation/: buffer.mts  difference.mts  intersection.mts  make-valid.mts  symmetric-difference.mts  unary-union.mts  union.mts
src/operations/: buffer.mts  difference.mts  intersection.mts  makeValid.mts  simplify.mts  symmetricDifference.mts  unaryUnion.mts  union.mts
src/other/: growMemory.mts  version.mts
src/predicates/: distanceWithin.mts  equalsExact.mts  equalsIdentical.mts  is-simple.mts  is-valid.mts  isEmpty.mts  isGeometry.mts  isPrepared.mts  isSimple.mts  isValid.mts
src/spatial-indexes/: STRTree.mts
src/spatial-predicates/: contains.mts  covers.mts  crosses.mts  equals.mts  intersects.mts  overlaps.mts  relate.mts  touches.mts
src/types/: wasm-geos.mts  wasm-other.mts
tests/: index.test.mts  tests-utils.mts
tests/core/: geos.test.mts
tests/geom/: Geometry.test.mts  Geometry_clone.test.mts  Geometry_normalize.test.mts  Geometry_orientPolygons.test.mts  Geometry_toJSON.test.mts  Geometry_type.test.mts  PreparedGeometry.test.mts  geometry.test.mts  geometry_area.test.mts  geometry_bbox.test.mts  geometry_clone.test.mts  geometry_isEmpty.test.mts  geometry_length.test.mts  geometry_normalize.test.mts  geometry_orientPolygons.test.mts  geometry_toJSON.test.mts  geometry_type.test.mts
tests/helpers/: helpers.test.mts
tests/io/: GeoJSON.test.mts  WKB.test.mts  WKT.test.mts  geosify.test.mts  jsonify.test.mts  wkb.test.mts  wkt.test.mts
tests/measurement/: area.test.mts  bounds.test.mts  distance-distanceWithin-nearestPoints.test.mts  distance_and_nearestPoints.test.mts  frechetDistance.test.mts  (+2 more)
(+136 files in other folders)
